fix: comment out scrollbar styles to prevent unintended display issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 @import './font.css';
 @import './theme.css';
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   @apply h-1.5 w-1.5;
 }
 
@@ -16,7 +16,7 @@
 
 ::-webkit-scrollbar-thumb {
   @apply bg-sb-thumb border-rd-1;
-}
+} */
 
 @property --clip-size {
   syntax: '<length>';
